Changes as per Google Docs

--- a/dataAcquisition.html
+++ b/dataAcquisition.html
@@ -5,7 +5,7 @@
                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            
+
             <meta name="description" content="">
 
             <meta name="keywords" content="">
@@ -57,7 +57,7 @@
                         <p class="department">Data-acquisition</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
                                 <div class="col-xs-3">
                                         <div class="imageDiv">
-                                           <img src="src/img/team/Akshat Pandey.JPG" alt="Avatar" class="personImage">
+                                           <img src="src/img/team/Utkarsh Shrivastava.JPG" alt="Avatar" class="personImage">
                                            <div class="hoverDiv">
                                              <a href="https://www.facebook.com/utkarsh.iitr" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
                                              <a href="https://www.linkedin.com/in/utkarsh-srivastava-iitr/" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
@@ -130,4 +130,3 @@
                                 </div>
                         </div>
                 </footer>
-
