--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 });
         </script>
-      <nav class="navbar navbar-default navbarAnimate fixed-nav-bar"> 
+      <nav class="navbar navbar-default navbarAnimate fixed-nav-bar">
                   <div class="container-fluid">
                     <div class="navbar-header">
                       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -124,7 +124,7 @@
                                 <p class="aboutUsTextMain text-justify hideme">IIT Roorkee Motorsports is the Formula Student team of IIT Roorkee which participates in Formula SAE competitions, the largest Engineering Competition in the world, by designing, developing and fabricating an open wheel Formula style Race Car. Our debut competition was the FSAE –Australasia in 2011 and since then the team has improved considerably to being the 1st Ranked Electric team in India as per the FSAE Electric rankings.</p>
     </div>
       <div class="col-sm-4 col-sm-offset-4 readMoreMainButton navbarAnimate ">
-                                        <a href="about.html">READ MORE</a> 
+                                        <a href="about.html">READ MORE</a>
       </div>
    </div>
    <hr>
@@ -132,13 +132,15 @@
 </div>
 <div class="container-fluid">
 <div class="row eventDiv">
-                                <div class="col-sm-6 rightBorder eventPad">
-                                        <p class="eventHeading navbarAnimate">UPDATES</p>
-                                        <p class="eventContent eventContentHeading navbarAnimate" >Participating in Formula Bharat 2019 followed by FS UK 2019 </p>
-                                        <p class="eventContent navbarAnimate text-justify">23 Mar 2018 - Procurement and Fabrication of the car is starting from the 1st week of April.</br>
+<div class="col-sm-6 rightBorder eventPad">
+          <p class="eventHeading navbarAnimate">UPDATES</p>
+          <p class="eventContent eventContentHeading navbarAnimate" >Participating in Formula Bharat 2019 followed by FS UK 2019 </p>
+          <p class="eventContent navbarAnimate text-justify">
+  23 Mar 2018 - Procurement and Fabrication of the car is starting &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;
+                     from the 1st week of April.</br>
 22 Mar 2018 - Design of the next car is completed.</br>
-17 Mar 2018 - Vehicle and current project exhibition at Srishti 2018  A Techno-hobby competition of IIT Roorkee.</br>
-10 Mar 2018 - BEG Exhibition at Group Ground Roorkee Cantonment.</br>
+17 Mar 2018 - Vehicle and current project exhibition at</br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;&ensp;Srishti 2018  A Techno-hobby competition of IITR</br>
+10 Mar 2018 - BEG Exhibition at Group Ground Roorkee </br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;&ensp;Cantonment.</br>
 10 Feb 2018 - Team has successfully tested the prototype of BMS.</br>
 27 Oct 2017 - Thomso 2017 Promotional event .</br>
 </p>
@@ -318,9 +320,9 @@
                         <div class="container-fluid">
                                 <div class="row">
                                         <div class="col-sm-9">
-                        <p class="footerDetail"><i class="fa fa-home footerDetailIcon"></i>MECHANICAL & INDUSTRIAL ENGINEERING DEPARTMENT, IIT ROORKEE</p>
-                        <p class="footerDetail"><i class="fa fa-globe footerDetailIcon1"></i>247667 , UTTRAKHAND, INDIA</p><p class="footerDetail"><i class="fa fa-mobile footerDetailIcon1" style="font-size: 2.2vw"></i>MOBILE : +91-8171360730, +91-7060334417</p>
-                        <p class="footerDetail"><i class="fa fa-envelope footerDetailIcon1"></i>EMAIL : iitrms.iitr@gmail.com</p>
+                        <p class="footerDetail"><i class="fa fa-home footerDetailIcon"></i>Mechanical & Industrial Engineering Department, IIT Roorkee</p>
+                        <p class="footerDetail"><i class="fa fa-globe footerDetailIcon1"></i>247667 , Uttarakhand, India</p><p class="footerDetail"><i class="fa fa-mobile footerDetailIcon1" style="font-size: 2.2vw"></i>Mobile : +91-8171360730, +91-7060334417</p>
+                        <p class="footerDetail"><i class="fa fa-envelope footerDetailIcon1"></i>Email : iitrms.iitr@gmail.com</p>
                     </div>
                     <div class="col-sm-3">
 
@@ -357,4 +359,3 @@
                 </script>
         </body>
 </html>
-
