--- a/team.html
+++ b/team.html
@@ -415,38 +415,38 @@ Quality Management. Prof Dwivedi has stood by our side for all these years and f
 
              </div>
 </div>
-		<footer class="footer" id="contact" style="margin-top: 10vh">
-	 	<div class="container-fluid">
-				<div class="row">
-					<div class="col-xs-9">
-                        <p class="footerDetail"><i class="fa fa-home footerDetailIcon"></i>MECHANICAL & INDUSTRIAL ENGINEERING DEPARTMENT, IIT ROORKEE</p>
-                        <p class="footerDetail"><i class="fa fa-globe footerDetailIcon1"></i>247667 , UTTRAKHAND, INDIA</p><p class="footerDetail"><i class="fa fa-mobile footerDetailIcon1" style="font-size: 2.2vw"></i>MOBILE : +91-8171360730, +91-7060334417</p>
-                        <p class="footerDetail"><i class="fa fa-envelope footerDetailIcon1"></i>EMAIL : iitrms.iitr@gmail.com</p>
-                    </div>
-                    <div class="col-sm-3">
+<footer class="footer" id="contact">
+												<div class="container-fluid">
+																<div class="row">
+																				<div class="col-sm-9">
+												<p class="footerDetail"><i class="fa fa-home footerDetailIcon"></i>Mechanical & Industrial Engineering Department, IIT Roorkee</p>
+												<p class="footerDetail"><i class="fa fa-globe footerDetailIcon1"></i>247667 , Uttarakhand, India</p><p class="footerDetail"><i class="fa fa-mobile footerDetailIcon1" style="font-size: 2.2vw"></i>Mobile : +91-8171360730, +91-7060334417</p>
+												<p class="footerDetail"><i class="fa fa-envelope footerDetailIcon1"></i>Email : iitrms.iitr@gmail.com</p>
+										</div>
+										<div class="col-sm-3">
 
-					</div>
-				</div>
-                <div class="row">
-                	<div class="col-xs-9">
-                		<p class="copyright">Copyright &#169; - 2017 Team IIT Roorkee MotorSports </p>
-                	</div>
-                	<div class="col-xs-3">
-                		<div class="row">
-						 <div class="row">
-                  <a href="https://www.facebook.com/iitrms.in/" target="_blank"><i class="fa fa-facebook footerSocialIcon" ></i></a>
-                  <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fiitroorkeemotorsportsteam%2F&h=ATM5BKop9CBbx8iKrXO6uXWOAZlYSC4XE9vXec2-DbFECfr5L7HynvBrMewSrBTqgRha1DC7OmjCUy3oQaD38k_dBM9g-k_w4xDA6I95nD4kBQ"  target="_blank"><i class="fa fa-linkedin footerSocialIcon"></i></a>
-                  <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Ftwitter.com%2Fiitrms_iitr&h=ATM8JDpGH7RfYerxvDzOZ73yD9u3PrhsmTLexZ6Dn7cWzUU459y2jU_fB0nSe9Zmv4XSXHQ4gX8XR6yuMNswhwvso5dNxbs8hn-IsY8mqSEJ8g"  target="_blank"><i class="fa fa-twitter  footerSocialIcon"></i></a>
-                    <a href="https://www.instagram.com/iitrms/?hl=en" target="_blank"><i class="fa fa-instagram footerSocialIcon"></i>
-            </div>
-					 	</div>
-                	</div>
-                </div>
-
-
-				</div>
-			</div>
-        	</footer>
+																				</div>
+																</div>
+								<div class="row">
+												<div class="col-sm-9">
+																<p class="copyright">Copyright &#169; - 2017 Team IIT Roorkee MotorSports </p>
+												</div>
+												<div class="col-sm-3">
+																<!-- <div class="row">
+																				<div class="col-sm-12 readMoreMainButton downloadBrochureButton navbarAnimate ">
+																																<a href="about.html">DOWNLOAD BROCHURE</a>
+																												</div>
+																</div> -->
+																<div class="row">
+																																				<a href="https://www.facebook.com/iitrms.in/" target="_blank"><i class="fa fa-facebook footerSocialIcon" ></i></a>
+																																				<a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fiitroorkeemotorsportsteam%2F&h=ATM5BKop9CBbx8iKrXO6uXWOAZlYSC4XE9vXec2-DbFECfr5L7HynvBrMewSrBTqgRha1DC7OmjCUy3oQaD38k_dBM9g-k_w4xDA6I95nD4kBQ"  target="_blank"><i class="fa fa-linkedin footerSocialIcon"></i></a>
+																																				<a href="https://l.facebook.com/l.php?u=https%3A%2F%2Ftwitter.com%2Fiitrms_iitr&h=ATM8JDpGH7RfYerxvDzOZ73yD9u3PrhsmTLexZ6Dn7cWzUU459y2jU_fB0nSe9Zmv4XSXHQ4gX8XR6yuMNswhwvso5dNxbs8hn-IsY8mqSEJ8g"  target="_blank"><i class="fa fa-twitter  footerSocialIcon"></i></a>
+																																<a href="https://www.instagram.com/iitrms/?hl=en" target="_blank"><i class="fa fa-instagram footerSocialIcon"></i>
+																								</div>
+												</div>
+								</div>
+												</div>
+								</footer>
 		<script>
 			$(".scrollTo").on('click', function(e) {
 			     e.preventDefault();
