--- a/vehicleControl.html
+++ b/vehicleControl.html
@@ -5,7 +5,7 @@
                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            
+
             <meta name="description" content="">
 
             <meta name="keywords" content="">
@@ -55,7 +55,7 @@
                            <div class="container-fluid" style="margin-top:10vh">
                 <div class="row">
                         <div class="col-md-10 col-md-offset-2">
-                                <p class="department">Material Analysis</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
+                                <p class="department">Vehicle Control</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
                                 <div class="col-xs-4">
                                         <div class="imageDiv">
                                            <img src="src/img/team/.JPG" alt="Avatar" class="personImage">
@@ -105,4 +105,3 @@
                                 </div>
                         </div>
                 </footer>
-
