Minor changes in about us page

--- a/team.html
+++ b/team.html
@@ -339,7 +339,7 @@
                                            </div>
                                            <div class="teamid">
                                            <p class="teamname">Prashant verma</p>
-                                           <p class="teampos">Developer</p>
+                                           <p class="teampos">Head Developer</p>
                                                    </div>
                                                 </div>
                                         </div>
