iitr sponsors added

--- a/sponsors.html
+++ b/sponsors.html
@@ -109,24 +109,32 @@
 						<div class="row" style="margin-top: 5vh;margin-bottom: 15vh">
 							<div class="col-sm-11 col-sm-offset-1">
 								<div class="row">
-									<div class="col-sm-4">
+                                    <div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage" /></figure>
+											    <figure><img src="src/img/sponsors/iitrlogo.jpg"  class=" iitrlogo sponsorsImage" /></figure>
 										    </div>
 										</div>
 									</div>
-									<div class="col-sm-4">
+
+									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/gl.jpg"  class="sponsorsImage" /></figure>
+											    <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage mrf" /></figure>
 										    </div>
 										</div>
 									</div>
-									<div class="col-sm-4">
+									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage" /></figure>
+											    <figure><img src="src/img/sponsors/gl.jpg"  class="sponsorsImage gl" /></figure>
+										    </div>
+										</div>
+									</div>
+									<div class="col-sm-3">
+										<div class="hover08 column">
+										    <div>
+											    <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage sw" /></figure>
 										    </div>
 										</div>
 									</div>
