index.html and about.html slider changes

--- a/index.html
+++ b/index.html
@@ -166,33 +166,34 @@
                     <h3 class="recent-work"> OUR &nbsp PROJECTS</h3></div>
                 <div class="col-lg-12 col-lg-offset-0 recent">
                     <div id="owl-demo" class="owl-carousel owl-theme wow fadeIn animated" data-wow-animation-name="fadeIn" style="opacity: 1; display: block; visibility: visible; animation-name: fadeIn;">
-                        <div class="owl-wrapper-outer"><div class="owl-wrapper" style="width: 90vw; left: 0px; display: block;"><div class="owl-item" style="width: 20vw;"><div class="item view view-tenth"><img src="works/img2017.jpg" alt="work Image">
+                        <div class="owl-wrapper-outer"><div class="owl-wrapper" style="width: 90vw; left: 5vw; display: block;">
+                          <div class="owl-item" style="width: 20vw;"><div class="item view view-tenth"><img src="works/img2017.jpg" alt="work Image">
                             <div class="mask">
                                 <a href="project.html#cars2017" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"><span class="owl-wrapper"></span></i>
                                     <br>2017</a>
                             </div>
-<<<<<<< HEAD
-                        </div></div><div class="owl-item" style="width: 20vw;"><div class="item view view-tenth"><img src="works/img6.jpg" alt="work Image">
-=======
-                        </div></div><div class="owl-item" style="width: 285px;"><div class="item view view-tenth"><img src="works/img6.jpg" alt="work Image">
-
->>>>>>> 76d6f2732c7770b558e7548b54f9b2bc62c6dce6
+                          </div>
+                        </div>
+                          <div class="owl-item" style="width: 20vw;"><div class="item view view-tenth"><img src="works/img6.jpg" alt="work Image">
                             <div class="mask">
-                                <a href="project.html#cars2015" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
+                                <a href="project.html#cars2013" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
                                     <br>2015</a>
                             </div>
-                        </div></div><div class="owl-item" style="width: 20vw;"><div class="item view view-tenth"><img src="works/img2.jpg" alt="work Image">
+                        </div>
+                      </div>
+                      <div class="owl-item" style="width: 20vw;"><div class="item view view-tenth"><img src="works/img2.jpg" alt="work Image">
                             <div class="mask">
                                 <a href="project.html#cars2013" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
                                     <br>2013</a>
                             </div>
-                        </div></div><div class="owl-item" style="width: 20vw;"><div class="item view view-tenth"><img src="works/img1.jpg" alt="work Image">
+                        </div>
+                      </div>
+                        <div class="owl-item" style="width: 20vw;"><div class="item view view-tenth"><img src="works/img1.jpg" alt="work Image">
                             <div class="mask">
                                 <a href="project.html#cars2011" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
                                     <br>2011</a>
                             </div>
                         </div></div></div></div>
-
 
 
                     <div class="owl-controls clickable" style="display: none;"><div class="owl-pagination"><div class="owl-page active"><span class=""></span></div></div></div></div>
@@ -202,6 +203,7 @@
                 
 <div id="carousel-example-generic" class="carousel slide mobile_view" data-ride="carousel">
   <!-- Indicators -->
+  <h3 class="recent-work"> OUR &nbsp PROJECTS</h3>
   <ol class="carousel-indicators margin-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
@@ -213,26 +215,26 @@
   <div class="carousel-inner">
     <div class="item active">
       <a href="project.html#cars2017"><img src="works/img2017.jpg" alt="car_2017"></a>
-      <div class="carousel-caption ">
-        <h3>2017</h3>
+      <div class="carousel-caption  ">
+        <h3><span class="cap">2017</span></h3>
       </div>
     </div>
     <div class="item">
       <a href="project.html#cars2015"><img src="works/img6.jpg" alt="car_2015"></a>
       <div class="carousel-caption ">
-        <h3>2015</h3>
+        <h3><span class="cap"> 2015</span></h3>
       </div>
     </div>
     <div class="item">
       <a href="project.html#cars2013"><img src="works/img2.jpg" alt="car_2013"></a>
       <div class="carousel-caption ">
-        <h3>2013</h3>
+        <h3><span class="cap">2013</span></h3>
       </div>
     </div>
     <div class="item">
       <a href="project.html#cars2011"><img src="works/img1.jpg" alt="car_2011"></a>
       <div class="carousel-caption ">
-        <h3>2011</h3>
+        <h3><span class="cap">2011</span></h3>
       </div>
     </div>
 
