--- a/about.html
+++ b/about.html
@@ -63,17 +63,17 @@
                         <div id="myCarousel" class="carousel slide">
                             <div class="carousel-inner">
                                 <div class="active item"><img src="src/img/p1.JPG" alt="">
-                                    <div class="carousel-caption">
+                                    <div class="carousel-caption carousel-caption-about">
                                         <p>Team IIT Roorkee MotorSports at FSUK competition, 2013</p>
                                     </div>
                                 </div>
                                 <div class="item"><img src="src/img/p2.jpg" alt="">
-                                    <div class="carousel-caption">
+                                    <div class="carousel-caption carousel-caption-about">
                                         <p>Our Debut Race at FSAE Australasia, 2011</p>
                                     </div>
                                 </div>
                                 <div class="item"><img src="src/img/p3.jpg" alt="">
-                                    <div class="carousel-caption">
+                                    <div class="carousel-caption carousel-caption-about">
                                         <p>Team IIT Roorkee MotorSports at FSUK competition, 2013</p>
                                     </div>
                                 </div>
