all sponsors and home page  links added

--- a/index.html
+++ b/index.html
@@ -313,49 +313,49 @@
                                         </div>
                                         <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1400px;height:50px;overflow:hidden;">
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/mrf.png" />
+                                                <a href="http://www.mrftyres.com/" target="_blank"> <img data-u="image" src="src/img/sponsors/mrf.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/gl.jpg" />
+                                                <a href="http://www.goodlucksteel.com/" target="_blank"> <img data-u="image" src="src/img/sponsors/gl.jpg" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/sw.png" />
+                                                <a href="http://www.solidworks.in/" target="_blank"> <img data-u="image" src="src/img/sponsors/sw.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/wb.png" />
+                                                <a href="http://en.winston-battery.com" target="_blank"> <img data-u="image" src="src/img/sponsors/wb.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/iotrek.png" />
+                                                <a href="http://www.iotrek.in/" target="_blank"> <img data-u="image" src="src/img/sponsors/iotrek.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/navigus.png" />
+                                                <a href="http://navigus.in/" target="_blank"> <img data-u="image" src="src/img/sponsors/navigus.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/motul.png" />
+                                                <a href="https://www.motul.com/in/en" target="_blank"> <img data-u="image" src="src/img/sponsors/motul.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/gdl.jpg" />
+                                                <a href="http://www.goodlucksteel.com/" target="_blank"> <img data-u="image" src="src/img/sponsors/gdl.jpg" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/blc.png" />
+                                                <a href="#"> <img data-u="image" src="src/img/sponsors/blc.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/sw.png" />
+                                                <a href="http://www.solidworks.in/" target="_blank"> <img data-u="image" src="src/img/sponsors/sw.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/cen.gif" />
+                                                <a href="http://www.centuryply.com/" target="_blank"> <img data-u="image" src="src/img/sponsors/cen.gif" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/phe.png" />
+                                                <a href="https://www.phoenixcontact.com/online/portal/pc?1dmy&urile=wcm:path:/pcen/web/home" target="_blank"> <img data-u="image" src="src/img/sponsors/phe.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/tidc.png" />
+                                                <a href="http://www.tidcindia.in/" target="_blank"> <img data-u="image" src="src/img/sponsors/tidc.png" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/enap.jpg" />
+                                                <a href="#" target="_blank"> <img data-u="image" src="src/img/sponsors/enap.jpg" /></a>
                                             </div>
                                             <div data-p="30.00">
-                                                <img data-u="image" src="src/img/sponsors/ae.jpg" />
+                                                <a href="http://www.abrasivesedge.com/" target="_blank"> <img data-u="image" src="src/img/sponsors/ae.jpg" /></a>
                                             </div>
                                         </div>
                                     </div>
