--- a/sponsors.html
+++ b/sponsors.html
@@ -112,7 +112,7 @@
                                     <div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/iitrlogo.jpg"  class=" iitrlogo sponsorsImage" /></figure>
+                                                <a href="https://www.iitr.ac.in/" target="_blank"><figure><img src="src/img/sponsors/iitrlogo.jpg"  class=" iitrlogo sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
@@ -120,21 +120,21 @@
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage mrf" /></figure>
+                                                <a href="http://www.mrftyres.com/" target="_blank"> <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage mrf" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/gl.jpg"  class="sponsorsImage gl" /></figure>
+                                                <a href="http://www.goodlucksteel.com/" target="_blank"> <figure><img src="src/img/sponsors/gl.jpg"  class="sponsorsImage gl" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage sw" /></figure>
+                                                <a href="http://www.solidworks.in/" target="_blank"> <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage sw" /></figure></a>
 										    </div>
 										</div>
 									</div>
@@ -150,28 +150,28 @@
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage" /></figure>
+                                                <a href="http://www.mrftyres.com/" target="_blank"> <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/wb.png"  class="sponsorsImage" /></figure>
+                                                <a href="http://en.winston-battery.com/" target="_blank"> <figure><img src="src/img/sponsors/wb.png"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/iotrek.png"  class="sponsorsImage" /></figure>
+                                                <a href="http://www.iotrek.in/" target="_blank"> <figure><img src="src/img/sponsors/iotrek.png"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/navigus.png"  class="sponsorsImage" /></figure>
+                                                <a href="http://navigus.in/" target="_blank"> <figure><img src="src/img/sponsors/navigus.png"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
@@ -182,28 +182,28 @@
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/motul.png"  class="sponsorsImage" /></figure>
+                                                <a href="https://www.motul.com/in/en" target="_blank"> <figure><img src="src/img/sponsors/motul.png"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/gdl.jpg"  class="sponsorsImage" /></figure>
+                                                <a href="http://www.goodlucksteel.com/" target="_blank"> <figure><img src="src/img/sponsors/gdl.jpg"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/blc.png"  class="sponsorsImage" /></figure>
+                                                <a href="#" target="_blank"> <figure><img src="src/img/sponsors/blc.png"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage" /></figure>
+                                                <a href="http://www.solidworks.in/" target="_blank"> <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
@@ -214,35 +214,35 @@
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/cen.gif"  class="sponsorsImage" /></figure>
+                                                <a href="http://www.centuryply.com/" target="_blank"><figure><img src="src/img/sponsors/cen.gif"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/phe.png"  class="sponsorsImage" /></figure>
+                                                <a href="https://www.phoenixcontact.com/online/portal/pc?1dmy&urile=wcm:path:/pcen/web/home" target="_blank"> <figure><img src="src/img/sponsors/phe.png"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/tidc.png"  class="sponsorsImage" /></figure>
+                                                <a href="http://www.tidcindia.in/" target="_blank"> <figure><img src="src/img/sponsors/tidc.png"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/enap.jpg"  class="sponsorsImage" /></figure>
+                                                <a href="http://www.abrasivesedge.com/" target="_blank"><figure><img src="src/img/sponsors/enap.jpg"  class="sponsorsImage" /></figure></a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-4 col-sm-offset-4">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/ae.jpg"  class="sponsorsImage ae"/></figure>
+                                                <a href="http://www.resistorsonline.com/" target="_blank"><figure><img src="src/img/sponsors/ae.jpg"  class="sponsorsImage ae"/></figure></a>
 										    </div>
 										</div>
 									</div>
