--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
                                 </div>-->
 
-                                <div class="col-sm-6 ">
+                                <div class="col-sm-6 facebook">
                 <section class="wow  col-lg-12 " style=" visibility: visible; " data-wow-animation-name="fadeInRight">
                     <iframe width="100%" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fiitrms.in%2F%3Ffref%3Dts&amp;tabs=timeline&amp;width=500&amp;height=500&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
                 </section>
