--- a/project.html
+++ b/project.html
@@ -26,6 +26,11 @@
 			<link href="src/css/main.css" rel="stylesheet">
 	    <link href="themes/2/js-image-slider1.css" rel="stylesheet" type="text/css" />
     <script src="themes/2/js-image-slider.js" type="text/javascript"></script>
+    <link rel="shortcut icon" href="../favicon.ico"> 
+      
+		<link rel="stylesheet" type="text/css" href="css/slicebox.css" />
+		<link rel="stylesheet" type="text/css" href="css/custom.css" />
+		<script type="text/javascript" src="js/modernizr.custom.46884.js"></script>
     <!-- <link href="src/css/generic.css" rel="stylesheet" type="text/css" /> -->
 	    <!--  <link href="themes/5/js-image-slider1.css" rel="stylesheet" type="text/css" />
     <script src="themes/5/js-image-slider.js" type="text/javascript"></script>
@@ -82,7 +87,7 @@
 	</nav>
 	<pre>	
 			</pre>
-	<div id="sliderFrame" style="margin-top: 10vh;margin-bottom: 5vh">
+	<div id="sliderFrame"   style="margin-top: 10vh;margin-bottom: 5vh;">
         <div id="slider">
             <a href="#cars2017"><img src="works/hullo-81.jpg" /></a>
             <a href="#cars2015"><b data-src="src/img/gallery/pic5.jpg"></b></a>
@@ -116,7 +121,122 @@
         <div style="clear:both;height:0;"></div>
     </div>
 
+<div class="container" id="sliderFrame_mobile">
 
+			<div class="wrapper">
+
+				<ul id="sb-slider" class="sb-slider">
+					<li>
+						<a href="#cars2017" ><img src="works/hullo-81.jpg" alt="car2017"/></a>
+						<span class="sb_slider-caption"><a href="#cars2011" >2017</a></span>
+
+					</li>
+					<li>
+						<a href="#cars2015" ><img src="src/img/gallery/pic5.jpg" alt="car2015"/></a>
+						<span class="sb_slider-caption"><a href="#cars2015" >2015</a></span>
+					</li>
+					<li>
+						<a href="#cars2013"><img src="works/img2.jpg" alt="car2013"/></a>
+						<span class="sb_slider-caption"><a href="#cars2013" >2013</a></span>
+					</li>
+					<li>
+						<a href="#cars2011" ><img src="src/img/gallery/img4.jpg" alt="car2011"/></a>
+						<span class="sb_slider-caption"><a href="#cars2011" >2011</a></span>
+					</li>
+				</ul>
+			</div>
+				<div style="position: relative;">
+					<button id="lbtn" class="lbtn" >&#10095;</button>
+				    <button id="rbtn" class="rbtn" >&#10095;</button>
+				</div>
+				
+			</div><!-- /wrapper -->
+		</div>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script type="text/javascript" src="js/jquery.slicebox.js"></script>
+		<script type="text/javascript">
+			$(function() {
+				var Page = (function() {
+					var image_index;
+
+					var $nextbtn = $('#rbtn').hide(),
+						$previousbtn = $('#lbtn').hide(),
+						$shadow = $( '#shadow' ).hide(),
+						slicebox = $( '#sb-slider' ).slicebox( {
+							onReady : function() {
+								$nextbtn.show();
+								$previousbtn.show();
+								$shadow.show();
+							},
+							orientation : 'v',
+							cuboidsRandom : false,
+							disperseFactor : 20
+						} ),
+						init = function() {
+							initEvents();
+						},
+						initEvents = function() {
+
+							image_index = slicebox.imageIndex();
+
+							// add navigation events
+							$nextbtn.on( 'click', function() {
+								slicebox.next();
+								return false;
+							} );
+							$previousbtn.on( 'click', function() {
+								slicebox.previous();
+								return false;
+							} );
+						};
+						return { init : init };
+				})();
+				Page.init();
+			});
+		</script>
+
+		    <!--
+<div class="inner" style="display: none;">
+<div class="sliderx">
+	<img src="works/hullo-81.jpg" class="slidex0" id="sl0">
+	<img src="src/img/gallery/pic5.jpg" class="slidex1" id="sl1">
+	<img src="works/img2.jpg" class="slidex2" id="sl2">
+	<img src="src/img/gallery/img4.jpg" class="slidex3" id="sl3">
+	<button  class="lbtn" onclick="assignClass(-1)">&#10095;</button>
+    <button  class="rbtn" onclick="assignClass(+1)">&#10095;</button>
+</div>
+</div>
+
+
+<script type="text/javascript">
+
+var a,b,c,d,i;
+a=0;
+b=1;
+c=2;
+d=3;
+i=0;
+	function assignClass(n){
+    if(a<i){a+=4}
+    if(b<i){b+=4}
+    if(c<i){c+=4}
+    if(d<i){d+=4}
+		document.getElementById('sl0').className = "slidex" + (a-i*n);
+		document.getElementById('sl1').className = "slidex" + (b-i*n);
+		document.getElementById('sl2').className = "slidex" + (c-i*n);
+		document.getElementById('sl3').className = "slidex" + (d-i*n);
+		i++;
+        moveSlider();
+	}
+
+	function moveSlider(){
+		document.getElementById('sl0').style.WebkitAnimationPlayState = "running";
+		document.getElementById('sl1').style.WebkitAnimationPlayState = "running";
+		document.getElementById('sl2').style.WebkitAnimationPlayState = "running";
+		document.getElementById('sl3').style.WebkitAnimationPlayState = "running";
+	}
+</script>
+-->
 	<script>
 
 function cars() {
@@ -380,7 +500,7 @@ function cars() {
 																	 <div class="row">
 																					 <div class="col-sm-9">
 													 <p class="footerDetail"><i class="fa fa-home footerDetailIcon"></i>Mechanical & Industrial Engineering Department, IIT Roorkee</p>
-													 <p class="footerDetail"><i class="fa fa-globe footerDetailIcon1"></i>247667 , Uttarakhand, India</p><p class="footerDetail"><i class="fa fa-mobile footerDetailIcon1" style="font-size: 2.2vw"></i>Mobile : +91-8171360730, +91-7060334417</p>
+													 <p class="footerDetail"><i class="fa fa-globe footerDetailIcon1"></i>247667 , Uttarakhand, India</p><p class="footerDetail"><i class="fa fa-mobile footerDetailIcon1" style="font-size: 2.2vw"></i>Mobile : +91-8650267812, +91-7060863864</p>
 													 <p class="footerDetail"><i class="fa fa-envelope footerDetailIcon1"></i>Email : iitrms.iitr@gmail.com</p>
 											 </div>
 											 <div class="col-sm-3">
