corrected electrical team

--- a/lvsystem.html
+++ b/lvsystem.html
@@ -26,7 +26,7 @@
             <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
             <link href="src/css/indexMob2.css" rel="stylesheet">
         </head>
-<nav class="navbar navbar-default navbarAnimate header">
+        <nav class="navbar navbar-default navbarAnimate fixed-nav-bar"> 
                   <div class="container-fluid">
                     <div class="navbar-header">
                       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -37,19 +37,22 @@
                       </button>
                       <a class="navbar-brand" href="index.html"><img src="src/img/logo.gif" class="logoHeader"></a>
                     </div>
-                    <div class="collapse navbar-collapse staticnaavbar" id="bs-example-navbar-collapse-1">
+                    <div class="collapse navbar-collapse staticnaavbar team_nav" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right  headerLink">
-                                <li class="active"><a href="index.html">HOME</a></li>
-                                <li><a href="about.html">ABOUT US</a></li>
-                                <li><a href="project.html">CARS</a></li>
-                                <li><a href="team.html">TEAM</a></li>
-                                <li><a href="gallery.html">GALLERY</a></li>
-                                <li><a href="sponsors.html">SPONSORS</a></li>
-                                <li><a href="#contact" class="scrollTo">CONTACT US</a></li>
+                              <li><a class="navmobview" href="index.html">HOME</a></li>
+                              <li><a href="about.html" class="navmobview">ABOUT US</a></li>
+                              <li><a href="project.html" class="navmobview">CARS</a></li>
+                              <li class="active"><a href="team.html" class="navmobview">TEAM</a></li>
+                              <li><a href="gallery.html" class="navmobview">GALLERY</a></li>
+                              <li><a href="sponsors.html" class="navmobview">SPONSORS</a></li>
+                              <li><a href="#contact" class="navmobview scrollTo">CONTACT US</a></li>
                             </ul>
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container-fluid -->
                 </nav>
+  <pre>
+
+      </pre>
 <div class="container-fluid" style="margin-top:10vh">
                 <div class="row">
                         <div class="col-md-10 col-md-offset-2">
@@ -67,6 +70,20 @@
                                                    </div>
                                                 </div>
                                  </div>
+                                 <div class="col-xs-3">
+                                        <div class="imageDiv">
+                                           <img src="src/img/team/.JPG" alt="Avatar" class="personImage">
+                                           <div class="hoverDiv">
+                                             <a href="https://www.facebook.com/shivam.chopra.104" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
+                                             <a href="https://www.linkedin.com/in/shivam-chopra-5763b9133" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
+                                           </div>
+                                           <div class="teamid">
+                                           <p class="teamname">Shivam Chopra </p>
+                                           <p class="teampos"></p>
+                                           </div>
+                                         </div>
+                                 </div>
+
 
                                   <div class="col-xs-3">
                                         <div class="imageDiv">
@@ -78,20 +95,6 @@
                                            <div class="teamid">
                                            <p class="teamname twoline">Aditya Dhan raj Singh</p>
                                            <p class="teampos"></p>
-                                                   </div>
-                                                </div>
-                                        </div>
-                                        <div class="col-xs-3">
-                                                <div class="imageDiv">
-                                                   <img src="src/img/team/Manunjay.JPG" alt="Avatar" class="personImage">
-                                           <div class="hoverDiv">
-                                             <a href="https://www.facebook.com/mmjay87" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
-                                             <a href="https://www.linkedin.com/in/manunjay-mahaur-5b6b91139/" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
-                                           </div>
-
-                                                   <div class="teamid">
-                                                   <p class="teamname">Manunjay Mahaur</p>
-                                                   <p class="teampos"></p>
                                                    </div>
                                                 </div>
                                         </div>
