--- a/team.html
+++ b/team.html
@@ -211,13 +211,13 @@
                            <div class="col-xs-3">
                              <div>
                             <a href="lvsystem.html"><img src="team_img/lv.jpg" alt="" class="personImage"><br></a>
-                          <div class="teamname"> LV System</div>
+                          <div class="teamname"> LV System(VCU)</div>
                              </div>
                            </div>
                            <div class="col-xs-3">
                              <div>
                             <a href="vehicleControl.html"><img src="team_img/vcu.jpg" alt="" class="personImage"><br></a>
-                          <div class="teamname">Vehical Control Unit</div>
+                          <div class="teamname">BM System</div>
                              </div>
                              </div>
                            <div class="col-xs-3">
