some changes in sponsors and team

--- a/sponsors.html
+++ b/sponsors.html
@@ -120,7 +120,7 @@
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
-                                                <a href="http://www.mrftyres.com/" target="_blank"> <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage mrf" /></figure></a>
+                                                <a href="https://in.mathworks.com/" target="_blank"> <figure><img src="src/img/sponsors/mathworks.jpg"  class="sponsorsImage mathworks" /></figure></a>
 										    </div>
 										</div>
 									</div>
