--- a/team.html
+++ b/team.html
@@ -103,7 +103,7 @@
 						   <img src="src/img/team/Aseem Routray.JPG" alt="Avatar" class="personImage">
                      			   <div class="hoverDiv">
 					     <a href="https://www.facebook.com/aseemkumar.routray" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
-					     <a href="www.linkedin.com/in/aseem-routray-564b02135" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
+					     <a href="https://www.linkedin.com/in/aseem-routray-564b02135/" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
 					   </div>
 
 						   <div class="teamid">
