made minor changes in styling

--- a/projects.html
+++ b/projects.html
@@ -33,13 +33,13 @@
             <a href="index.html#team">Team</a>
             <a href="gallery.html">Gallery</a>
             <a href="sponsor.html">Sponsors</a>
-            <a href="https://iitrms.home.blog/">Blog</a>
+            <!-- <a href="https://iitrms.home.blog/">Blog</a> -->
             <a href="contact.html">Contact Us</a>
         </nav>
         <!-- <menu ends here -->
             <!-- logo -->
         <a href="index.html"><div class="logo"><img src="img/logo.png"></a></div>
-        <a class="updates" title="iitrms updates" href="https://iitrms.home.blog/"><i class="fas fa-pen-nib"></i></a>
+        <!-- <a class="updates" title="iitrms updates" href="https://iitrms.home.blog/"><i class="fas fa-pen-nib"></i></a> -->
             <!-- logo ends -->
     </div>
     <div class="sticky_social">
@@ -252,10 +252,9 @@
                 </div>
                 <div class="col-md-6 cars_text">
                     <div class="cars_textbody" data-aos="fade-left"  data-aos-duration="1200">
-                        <h2>Car-2013</h2>
+                        <h2>Car-2011</h2>
                         <br>
-                        <p>
-                            In the second project, more than 35 students were part of the team which developed a plug-in series hybrid electric powertrain based race car and successfully participated at the international level in the competition “Formula Student, United Kingdom” held at the Silverstone F1 Racetrack, UK from 5-7 July 2013. It was organized by institution of mechanical Engineers (IMechE) in association with Jaguar Land Rover, Mercedes AMG, Shell etc. A total of 149 international teams from prestigious universities around the globe were registered in the event and IIT Roorkee was the only Indian team with a hybrid electric vehicle in the final competition. Here are the specifications of our hybrid car...
+                        <p>Our first project, an IC Engine with which we participated in FSAE Australasia and became the first Indian team to complete the endurance event.
                         </p>
                     </div>
                 </div><br><br><br><br>
