--- a/team_management.html
+++ b/team_management.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="IIT Roorkee Motorsports is the Formula Student team of IIT Roorkee which 
+    participates in Formula SAE competitions, the largest Engineering Competition in the ...">
+    <meta name="keywords" content="iit roorkee, motorcycle, iit jee, car racing, iit, moto racing, navy ssr,
+    afcat, bits pilani, racing, roorkee, formula 1, f1, iit bhu">
+    <meta name="title" content="IIT Roorkee MotorSports | contact us">   <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/foundation/6.1.1/foundation.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
@@ -74,13 +79,13 @@
             <a href="index.html#team">Team</a>
             <a href="gallery.html">Gallery</a>
             <a href="sponsor.html">Sponsors</a>
-            <a href="https://iitrms.home.blog/">Blog</a>
+            <!-- <a href="https://iitrms.home.blog/">Blog</a> -->
             <a href="contact.html">Contact Us</a>
         </nav>
         <!-- <menu ends here -->
             <!-- logo -->
         <a href="index.html" class="logo"><img src="img/logo.png"></a>
-        <a class="updates" title="iitrms updates" href="https://iitrms.home.blog/"><i class="fas fa-pen-nib"></i></a>
+        <!-- <a class="updates" title="iitrms updates" href="https://iitrms.home.blog/"><i class="fas fa-pen-nib"></i></a> -->
             <!-- logo ends -->
     </div>
     <div class="sticky_social">
